--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -10,9 +10,13 @@ runs:
   steps:
     - name: Print output
       run: echo Deployment to ${{ inputs.environment }} has started..
+      shell: powershell
     - name: Install dependencies
       run: npm install
+      shell: powershell
     - name: Delete service
       run: pm2 delete "books-${{ inputs.environment }}"
+      shell: powershell
     - name: Start service
       run: pm2 start -n "books-${{ inputs.environment }}" index.js -- ${{ inputs.port }}
+      shell: powershell
