--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -8,9 +8,9 @@ inputs:
 runs:   
   using: "composite"
   steps:
-    - name: Print output
-      run: echo Testing ${{ input.test_set }} test set on ${{ inputs.environment }} has started..
-    - name: Install dependencies
-      run: npm install
-    - name: Execute REST API integration tests
-      run: npm run ${{ input.test_set }} ${{ input.test_set }}_${{ inputs.environment }}
+    - name: Install dependencies and run REST API integration tests
+      run: |
+        echo Testing ${{ input.test_set }} test set on ${{ inputs.environment }} has started..
+        npm install
+        npm run ${{ input.test_set }} ${{ input.test_set }}_${{ inputs.environment }}
+      shell: powershell
