--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -25,16 +25,16 @@ jobs:
           port: 1010
           environment: 'DEV'
 
-  test-dev:
-    runs-on: self-hosted
-    needs: [deploy-dev]
-    steps:
-      - uses: actions/checkout@v3.5.2
-        with:
-          repository: 'Laura-Lasmane/course-js-api-framework'
-      - uses: ./.github/actions/test
-        with:
-          environment: 'DEV'
+ # test-dev:
+ #   runs-on: self-hosted
+ #   needs: [deploy-dev]
+ #   steps:
+ #     - uses: actions/checkout@v3.5.2
+ #       with:
+ #         repository: 'Laura-Lasmane/course-js-api-framework'
+ #     - uses: ./.github/actions/test
+  #      with:
+ #         environment: 'DEV'
 
   deploy-stg:
     runs-on: self-hosted
@@ -46,16 +46,16 @@ jobs:
           port: 1020
           environment: 'STG'
 
-  test-stg:
-    runs-on: self-hosted
-    needs: [deploy-stg]
-    steps:
-      - uses: actions/checkout@v3.5.2
-        with:
-          repository: 'Laura-Lasmane/course-js-api-framework'
-      - uses: ./.github/actions/test
-        with:
-          environment: 'STG'
+ # test-stg:
+ #   runs-on: self-hosted
+ #   needs: [deploy-stg]
+ #   steps:
+ #     - uses: actions/checkout@v3.5.2
+ #       with:
+ #         repository: 'Laura-Lasmane/course-js-api-framework'
+ #     - uses: ./.github/actions/test
+ #       with:
+ #         environment: 'STG'
 
   deploy-prd:
     runs-on: self-hosted
@@ -67,13 +67,13 @@ jobs:
           port: 1030
           environment: 'PRD'
 
-  test-prd:
-    runs-on: self-hosted
-    needs: [deploy-prd]
-    steps:
-      - uses: actions/checkout@v3.5.2
-        with:
-          repository: 'Laura-Lasmane/course-js-api-framework'
-      - uses: ./.github/actions/test
-        with:
-          environment: 'PRD'
+ # test-prd:
+ #   runs-on: self-hosted
+ #   needs: [deploy-prd]
+ #   steps:
+ #     - uses: actions/checkout@v3.5.2
+ #       with:
+ #         repository: 'Laura-Lasmane/course-js-api-framework'
+ #     - uses: ./.github/actions/test
+ #       with:
+ #         environment: 'PRD'
