Add positive exit code after service deletion

--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -14,4 +14,4 @@ runs:
         dir
         npm install
         npm run ${{ input.test_set }} ${{ input.test_set }}_${{ inputs.environment }}
-      shell: powershell
+      shell: cmd
