--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           repository: 'Laura-Lasmane/course-js-api-framework'
           path: 'api-tests'
-      - uses: .\.github\actions\test
+      - uses: ./.github/actions/test
         with:
           environment: 'DEV'
 
