--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -20,4 +20,4 @@ runs:
       uses: actions/upload-artifact@v3
       with: 
         name: test-report
-        path: mochawesome-report
+        path: api-tests/mochawesome-report/mochawesome.html
