--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v3.5.2
         with:
           repository: 'Laura-Lasmane/course-js-api-framework'
-          path: api-tests
+          path: 'api-tests'
       - uses: ./.github/actions/test
         with:
           environment: 'DEV'
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/checkout@v3.5.2
         with:
           repository: 'Laura-Lasmane/course-js-api-framework'
-          path: api-tests
+          path: 'api-tests'
       - uses: ./.github/actions/test
         with:
           environment: 'STG'
@@ -79,7 +79,7 @@ jobs:
       - uses: actions/checkout@v3.5.2
         with:
           repository: 'Laura-Lasmane/course-js-api-framework'
-          path: api-tests
+          path: 'api-tests'
       - uses: ./.github/actions/test
         with:
           environment: 'PRD'
